--- a/src/app/equipment/equipment-list.component.html
+++ b/src/app/equipment/equipment-list.component.html
@@ -10,6 +10,7 @@
             <h5 class="card-title">{{ equipment.name }}</h5>
             <p class="card-text">Category: {{ equipment.category.name }}</p>
             <p class="card-text">Price per day: {{ equipment.price_per_day | currency: 'USD' }}</p>
+            <p class="card-text">Id: #{{ equipment.id }}</p>
           </div>
         </div>
       </div>
