--- a/src/app/equipment/components/equipment-list/equipment-list.component.html
+++ b/src/app/equipment/components/equipment-list/equipment-list.component.html
@@ -1,1 +1,14 @@
+<div class="col-md-6">
+    <button class="btn btn-primary mb-3" (click)="toggleVisibility()">Toggle Equipment List</button>
 
+    <div *ngIf="showEquipmentList">
+        <div *ngFor="let equipment of equipments" class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">{{ equipment.name }}</h5>
+                <p class="card-text">Cateory: {{ equipment.category.name }}</p>
+                <p class="card-text">Price per day: {{ equipment.price_per_day | currency: 'USD' }}</p>
+                <p class="card-text">Id: #{{ equipment.id }}</p>
+            </div>
+        </div>
+    </div>
+</div>
