--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <app-errors></app-errors>
+<app-success-messages></app-success-messages>
 <app-equipment></app-equipment>
 <router-outlet></router-outlet>
