--- a/src/app/equipment/components/equipment-list/equipment-list.component.html
+++ b/src/app/equipment/components/equipment-list/equipment-list.component.html
@@ -1,22 +1,30 @@
-<div class="col-md-12">
+<script src="equipment-list.component.ts"></script>
+<app-equipment></app-equipment>
 
-    <button class="btn btn-primary mb-3" (click)="toggleVisibility()">Toggle Equipment List</button>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-12">
 
-    <div *ngIf="showEquipmentList">
-        <div class="row">
-            <div *ngFor="let equipment of equipments" class="col-md-4 mb-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ equipment.name }}</h5>
-                        <p class="card-text">Category: {{ equipment.category.name }}</p>
-                        <p class="card-text">Price per day: {{ equipment.price_per_day | currency: 'USD' }}</p>
-                        <p class="card-text">Id: #{{ equipment.id }}</p>
-                        <button class="btn btn-info" [routerLink]="['update' , equipment.id]">Edite</button>
-                        <app-equipment-delete [equipmentId]="equipment.id" (click)="reload(equipment)"></app-equipment-delete>
+            <button class="btn btn-primary mb-3" (click)="toggleVisibility()">Toggle Equipment List</button>
+
+            <div *ngIf="showEquipmentList">
+                <div class="row">
+                    <div *ngFor="let equipment of equipments" class="col-md-4 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ equipment.name }}</h5>
+                                <p class="card-text">Category: {{ equipment.category.name }}</p>
+                                <p class="card-text">Price per day: {{ equipment.price_per_day | currency: 'USD' }}</p>
+                                <p class="card-text">Id: #{{ equipment.id }}</p>
+                                <button class="btn btn-info" [routerLink]="['update' , equipment.id]">Edite</button>
+                                <app-equipment-delete [equipmentId]="equipment.id" (click)="reload(equipment)"></app-equipment-delete>
+                                <button class="btn btn-warning" [routerLink]="['/stocks/equipment',equipment.id , 'add']">Add Stock</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
-
 </div>
