--- a/src/app/equipment/components/equipment-update/equipment-update.component.html
+++ b/src/app/equipment/components/equipment-update/equipment-update.component.html
@@ -1,4 +1,5 @@
-<!-- update-equipment.component.html -->
+
+<app-equipment></app-equipment>
 
 <div class="container mt-4">
     <h2>Update Equipment</h2>
