--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 
 <button [routerLink]="['/equipments']">Equipments</button>
 <button [routerLink]="['/stocks']">Stocks</button>
+<button [routerLink]="['/demands']">Demands</button>
 <router-outlet></router-outlet>
