--- a/src/app/demand/demand.component.html
+++ b/src/app/demand/demand.component.html
@@ -1,1 +1,9 @@
-<p>demand works!</p>
+<div class="container mt-4">
+
+  <div class="row">
+
+    <button (click)="viewList()">View List</button>
+    <button (click)="addDemand()">Add Equipment</button>
+
+  </div>
+</div>
